# lualife

./: Cargo.toml  README.md  plan1.txt  tochatgpt1.txt
ai/ai_00/: config.lua  main.lua
ai/ai_01/: main.lua
ai/ai_02/: main.lua
ai/ai_03/: main.lua
ai/ai_04/: main.lua
ai/ai_05/: main.lua
ai/ai_06/: main.lua
ai/ai_07/: main.lua
ai/ai_08/: main.lua
ai/ai_09/: main.lua
ai/ai_10/: main.lua
ai/ai_11/: main.lua
ai/ai_12/: main.lua
ai/ai_13/: main.lua
ai/ai_14/: main.lua
ai/ai_15/: main.lua
ai/ai_16/: main.lua
ai/ai_17/: main.lua
ai/ai_18/: main.lua
ai/ai_19/: main.lua
ai/ai_20/: main.lua
ai/ai_21/: main.lua
ai/ai_22/: main.lua
ai/ai_23/: main.lua
ai/ai_24/: main.lua
ai/ai_25/: main.lua
ai/ai_26/: main.lua
ai/ai_27/: main.lua
ai/ai_28/: main.lua
ai/ai_29/: main.lua
ai/ai_30/: main.lua
ai/ai_31/: main.lua
ai/evolution/: config.lua  main.lua  standalone.lua
config/: ai.ron  game.ron  ui.ron  worldgen.ron
docs/: todo1.txt  track1.txt
src/: app.rs  consts.rs  debug.rs  error.rs  lib.rs  main.rs  prelude.rs
src/accessibility/: colorblind.rs  high_contrast.rs  keybindings.rs  mod.rs  screen_reader.rs  ui_scaling.rs
src/achievements/: mod.rs
src/ai/: advanced.rs  coordination.rs  mod.rs
src/audio/: mod.rs
src/auth/: mod.rs
src/buildings/: building_type.rs  bundle.rs  construction.rs  defense.rs  mod.rs  production.rs  refinery.rs  repair.rs  roads.rs  spawn.rs  storage.rs
src/chat/: mod.rs
src/config/: ai_config.rs  game_config.rs  mod.rs  ui_config.rs  worldgen_config.rs
src/core/: game_state.rs  (+5 more)
(+181 files in other folders)
