[package]
name = "bevy_screeps_lua"
version = "0.1.0"
edition = "2021"
description = "A Screeps-like autonomous simulation with Lua-controlled AI factions"
authors = ["lualife"]
license = "MIT"

[dependencies]
# Game engine
bevy = { version = "0.14", features = ["dynamic_linking"] }

# Lua scripting
mlua = { version = "0.9", features = ["lua54", "vendored", "send"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = { version = "2.2", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true